--- a/information_cochains.ipynb
+++ b/information_cochains.ipynb
@@ -63,6 +63,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lup =W−1DTWi+1Di\n",
+    "and\n",
+    "Ldown = Di−1W−1 DT Wi"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -78,12 +87,41 @@
     "    B_to = construct_boundary(d+1,r)\n",
     "    BT_from = construct_coboundary(d,r)\n",
     "    L_up = np.multiply(B_to, BT_from).astype(np.float)\n",
-    "    return L_down + L_up\n",
+    "    return L_down + L_up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patients = [f'00{i}' for i in range(1,10)] \\\n",
+    "         + [f'0{i}' for i in range(10,100)] \\\n",
+    "         + [f'{i}' for i in range(100,165)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def construct_weights(N, inverse=False):\n",
+    "    num_rows = comb(20, N, exact=True)\n",
+    "    weights = np.zeros((num_rows, 1), dtype=np.float)\n",
+    "    for p in patients:\n",
+    "        data = import_data(p, N)\n",
+    "        weights += data['TC']\n",
+    "    weights /= 164\n",
+    "    \n",
+    "    if inverse:\n",
+    "        weights = np.reciprocal(weights)\n",
+    "        \n",
+    "    return np.multiply(weights, np.eye(num_rows))\n",
     "\n",
-    "laplacian = construct_laplacian(2,3)\n",
-    "print(laplacian.shape)\n",
-    "print(comb(3+1, 2+1, exact=True))\n",
-    "eigens = scipy.sparse.linalg.eigs(laplacian, k=laplacian.shape[1]-2)"
+    "W = construct_weights(4, inverse=True)\n",
+    "W"
    ]
   }
  ],
