Add weighted laplacian
Signed-off-by: ammedmar <anibal@medina-mardones.com>

--- a/information_cochains.ipynb
+++ b/information_cochains.ipynb
@@ -18,9 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def import_data(patient, N=3):\n",
+    "def import_data(patient, d=3):\n",
     "    '''...'''\n",
-    "    data = scipy.io.loadmat(f'/Users/anibal/Google Drive/Information cochains/O-info/OinfoSinfo/OinfoCopulasN{N}/Oinfop{patient}.mat')\n",
+    "    data = scipy.io.loadmat(f'/Users/anibal/Google Drive/Information cochains/O-info/OinfoSinfo/OinfoCopulasN{d+1}/Oinfop{patient}.mat')\n",
     "\n",
     "    del data['__header__']\n",
     "    del data['__version__']\n",
@@ -63,34 +63,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lup =W−1DTWi+1Di\n",
-    "and\n",
-    "Ldown = Di−1W−1 DT Wi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.sparse.linalg\n",
-    "\n",
-    "def construct_laplacian(d, r=19, weights=None):\n",
-    "    '''...'''\n",
-    "    B_from = construct_boundary(d,r)\n",
-    "    BT_to = construct_coboundary(d-1,r)\n",
-    "    L_down = np.multiply(BT_to, B_from).astype(np.float)\n",
-    "    B_to = construct_boundary(d+1,r)\n",
-    "    BT_from = construct_coboundary(d,r)\n",
-    "    L_up = np.multiply(B_to, BT_from).astype(np.float)\n",
-    "    return L_down + L_up"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -107,21 +79,110 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def construct_weights(N, inverse=False):\n",
-    "    num_rows = comb(20, N, exact=True)\n",
+    "def construct_weights(d, inverse=False):\n",
+    "    num_rows = comb(20, d+1, exact=True)\n",
     "    weights = np.zeros((num_rows, 1), dtype=np.float)\n",
     "    for p in patients:\n",
-    "        data = import_data(p, N)\n",
+    "        data = import_data(p, d)\n",
     "        weights += data['TC']\n",
     "    weights /= 164\n",
     "    \n",
     "    if inverse:\n",
     "        weights = np.reciprocal(weights)\n",
-    "        \n",
-    "    return np.multiply(weights, np.eye(num_rows))\n",
+    "    \n",
+    "    weights = np.reshape(weights, (num_rows,))\n",
+    "    \n",
+    "    return scipy.sparse.csr_matrix (( \n",
+    "                         weights, (range(num_rows), range(num_rows))), \n",
+    "                         shape=(num_rows, num_rows), dtype=float\n",
+    "                         )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Laplacian\n",
     "\n",
-    "W = construct_weights(4, inverse=True)\n",
-    "W"
+    "$L^{up}_i = W_i^{-1}\\, B_{i+1}\\, W_{i+1}\\, B_i^T$\n",
+    "\n",
+    "$L^{down}_i = B_{i-1}^T\\, W_{i-1}^{-1}\\, B_i\\, W_i$\n",
+    "\n",
+    "$L = L^{up} + L^{down}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(' d=3', comb(20,4),\n",
+    "      '\\n d=4', comb(20,5),\n",
+    "      '\\n d=5', comb(20,6) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def construct_up_laplacian(d):\n",
+    "    BTa = construct_coboundary(d)\n",
+    "#     print('BTa', BTa.shape, type(BTa))\n",
+    "\n",
+    "    Wp = construct_weights(d+1)\n",
+    "#     print('Wp', Wp.shape, type(Wp))\n",
+    "\n",
+    "    Bp = construct_boundary(d+1)\n",
+    "#     print('Bp', Bp.shape, type(Bp))\n",
+    "\n",
+    "    WIa = construct_weights(d, inverse=True)\n",
+    "#     print('WIa', WIa.shape, type(WIa))\n",
+    "\n",
+    "    Lu = np.multiply(WIa, np.multiply(Bp ,np.multiply(Wp, BTa)))\n",
+    "#     print('Lu', Lu.shape, type(Lu))\n",
+    "    \n",
+    "    return Lu\n",
+    "\n",
+    "def construct_down_laplacian(d):\n",
+    "\n",
+    "    Wa = construct_weights(d)\n",
+    "#     print('Wa', Wa.shape, type(Wa))\n",
+    "\n",
+    "    Ba = construct_boundary(d)\n",
+    "#     print('Ba', Ba.shape, type(Ba))\n",
+    "\n",
+    "    WIm = construct_weights(d-1, inverse=True)\n",
+    "#     print('WIm', WIm.shape, type(WIm))\n",
+    "\n",
+    "    BTm = construct_coboundary(d-1)\n",
+    "#     print('BTm', BTm.shape, type(BTm))\n",
+    "\n",
+    "    Ld = np.multiply(BTm, np.multiply(WIm ,np.multiply(Ba, Wa)))\n",
+    "#     print('Ld', Ld.shape, type(Ld))\n",
+    "    \n",
+    "    return Ld\n",
+    "\n",
+    "# Lu = construct_up_laplacian(4)\n",
+    "# Ld = construct_down_laplacian(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def construct_laplacian(d, r=19, weights=None):\n",
+    "    '''...'''\n",
+    "    Ld = construct_down_laplacian(d)\n",
+    "    Lu = construct_up_laplacian(d)\n",
+    "\n",
+    "    return Ld + Lu\n",
+    "\n",
+    "# L = construct_laplacian(4)"
    ]
   }
  ],
