Add save_eigendata and harmonic_decomposition
Signed-off-by: ammedmar <anibal@medina-mardones.com>

--- a/information_cochains.ipynb
+++ b/information_cochains.ipynb
@@ -9,7 +9,8 @@
     "import numpy as np\n",
     "import scipy.io\n",
     "from itertools import combinations\n",
-    "from scipy.special import comb"
+    "from scipy.special import comb\n",
+    "import pickle as pkl"
    ]
   },
   {
@@ -160,13 +161,17 @@
     "    BTm = construct_coboundary(d-1)\n",
     "#     print('BTm', BTm.shape, type(BTm))\n",
     "\n",
-    "    Ld = np.multiply(BTm, np.multiply(WIm ,np.multiply(Ba, Wa)))\n",
+    "    Ld = np.multiply(BTm, np.multiply(WIm, np.multiply(Ba, Wa)))\n",
     "#     print('Ld', Ld.shape, type(Ld))\n",
     "    \n",
     "    return Ld\n",
     "\n",
-    "# Lu = construct_up_laplacian(4)\n",
-    "# Ld = construct_down_laplacian(4)"
+    "def construct_laplacian(d, r=19, weights=None):\n",
+    "    '''...'''\n",
+    "    Ld = construct_down_laplacian(d)\n",
+    "    Lu = construct_up_laplacian(d)\n",
+    "\n",
+    "    return Ld + Lu"
    ]
   },
   {
@@ -175,14 +180,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def construct_laplacian(d, r=19, weights=None):\n",
-    "    '''...'''\n",
-    "    Ld = construct_down_laplacian(d)\n",
-    "    Lu = construct_up_laplacian(d)\n",
-    "\n",
-    "    return Ld + Lu\n",
-    "\n",
-    "# L = construct_laplacian(4)"
+    "def save_eigendata(d):\n",
+    "    L = construct_laplacian(d)\n",
+    "    eigens = np.linalg.eig(L.todense())\n",
+    "    np.save(f'{d}eigendata/{d}eigenvalues.npy' , eigens[0]) \n",
+    "    np.save(f'{d}eigendata/{d}eigenvectors.npy', eigens[1])\n",
+    "    return eigens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def harmonic_decomposition(patient, eigens, d=4):\n",
+    "    data = import_data(patient, d)\n",
+    "    cochain = data['Oinfo']\n",
+    "    x = np.linalg.solve(eigens[1], cochain)\n",
+    "    np.save(f'{d}eigendata/{d}decomposition{patient}.npy', x) # save"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "eigens = save_eigendata(5)\n",
+    "for patient in patients:\n",
+    "    harmonic_decomposition(patient, eigens, 5)"
    ]
   }
  ],
