Add data_analysis notebook
Signed-off-by: ammedmar <anibal@medina-mardones.com>

--- a/information_cochains.ipynb
+++ b/information_cochains.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import scipy.io\n",
     "from itertools import combinations\n",
     "from scipy.special import comb\n",
-    "import pickle as pkl"
+    "import pickle as pkl\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,27 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "patients = [f'00{i}' for i in range(1,10)] \\\n",
-    "         + [f'0{i}' for i in range(10,100)] \\\n",
-    "         + [f'{i}' for i in range(100,165)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def construct_weights(d, inverse=False):\n",
+    "def construct_weights(d, inverse=False, correlation='TC'):\n",
     "    num_rows = comb(20, d+1, exact=True)\n",
     "    weights = np.zeros((num_rows, 1), dtype=np.float)\n",
     "    for p in patients:\n",
     "        data = import_data(p, d)\n",
-    "        weights += data['TC']\n",
+    "        weights += data[correlation]\n",
     "    weights /= 164\n",
     "    \n",
     "    if inverse:\n",
@@ -114,9 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " d=3 4845.0 \n",
+      " d=4 15504.0 \n",
+      " d=5 38760.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(' d=3', comb(20,4),\n",
     "      '\\n d=4', comb(20,5),\n",
@@ -125,80 +125,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def construct_up_laplacian(d):\n",
+    "def construct_up_laplacian(d, inverted_weights=False, correlation='TC'):\n",
+    "    '''Lu = WIa Bp Wp BTa'''\n",
     "    BTa = construct_coboundary(d)\n",
-    "#     print('BTa', BTa.shape, type(BTa))\n",
-    "\n",
-    "    Wp = construct_weights(d+1)\n",
-    "#     print('Wp', Wp.shape, type(Wp))\n",
-    "\n",
+    "    Wp = construct_weights(d+1, inverse=False^inverted_weights, correlation='TC')\n",
     "    Bp = construct_boundary(d+1)\n",
-    "#     print('Bp', Bp.shape, type(Bp))\n",
-    "\n",
-    "    WIa = construct_weights(d, inverse=True)\n",
-    "#     print('WIa', WIa.shape, type(WIa))\n",
-    "\n",
+    "    WIa = construct_weights(d, inverse=True^inverted_weights, correlation='TC')\n",
     "    Lu = np.multiply(WIa, np.multiply(Bp ,np.multiply(Wp, BTa)))\n",
-    "#     print('Lu', Lu.shape, type(Lu))\n",
     "    \n",
     "    return Lu\n",
     "\n",
-    "def construct_down_laplacian(d):\n",
-    "\n",
-    "    Wa = construct_weights(d)\n",
-    "#     print('Wa', Wa.shape, type(Wa))\n",
-    "\n",
+    "def construct_down_laplacian(d, inverted_weights=False, correlation='TC'):\n",
+    "    '''Ld = BTm WIm Ba Wa'''\n",
+    "    Wa = construct_weights(d, inverse=False^inverted_weights, correlation='TC')\n",
     "    Ba = construct_boundary(d)\n",
-    "#     print('Ba', Ba.shape, type(Ba))\n",
-    "\n",
-    "    WIm = construct_weights(d-1, inverse=True)\n",
-    "#     print('WIm', WIm.shape, type(WIm))\n",
-    "\n",
+    "    WIm = construct_weights(d-1, inverse=True^inverted_weights, correlation='TC')\n",
     "    BTm = construct_coboundary(d-1)\n",
-    "#     print('BTm', BTm.shape, type(BTm))\n",
-    "\n",
     "    Ld = np.multiply(BTm, np.multiply(WIm, np.multiply(Ba, Wa)))\n",
-    "#     print('Ld', Ld.shape, type(Ld))\n",
     "    \n",
     "    return Ld\n",
     "\n",
-    "def construct_laplacian(d, r=19, weights=None):\n",
+    "def construct_laplacian(d, inverted_weights=False, correlation='TC'):\n",
     "    '''...'''\n",
-    "    Ld = construct_down_laplacian(d)\n",
-    "    Lu = construct_up_laplacian(d)\n",
+    "    Ld = construct_down_laplacian(d, inverted_weights, correlation='TC')\n",
+    "    Lu = construct_up_laplacian(d, inverted_weights, correlation='TC')\n",
     "\n",
     "    return Ld + Lu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_eigendata(d):\n",
-    "    L = construct_laplacian(d)\n",
-    "    eigens = np.linalg.eig(L.todense())\n",
-    "    np.save(f'{d}eigendata/{d}eigenvalues.npy' , eigens[0]) \n",
-    "    np.save(f'{d}eigendata/{d}eigenvectors.npy', eigens[1])\n",
-    "    return eigens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def harmonic_decomposition(patient, eigens, d=4):\n",
-    "    data = import_data(patient, d)\n",
-    "    cochain = data['Oinfo']\n",
-    "    x = np.linalg.solve(eigens[1], cochain)\n",
-    "    np.save(f'{d}eigendata/{d}decomposition{patient}.npy', x) # save"
    ]
   },
   {
@@ -211,14 +167,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "eigens = save_eigendata(5)\n",
-    "for patient in patients:\n",
-    "    harmonic_decomposition(patient, eigens, 5)"
+    "patients = [f'00{i}' for i in range(1,10) ] \\\n",
+    "         + [f'0{i}' for i in range(10,100)] \\\n",
+    "         + [f'{i}' for i in range(100,165)]\n",
+    "\n",
+    "for correlation in ['TC', 'DTC']:\n",
+    "    dual = ''\n",
+    "    if correlation == 'DTC':\n",
+    "        dual = '_dual'\n",
+    "    for inverted_weights in [False, True]:\n",
+    "        inv = ''\n",
+    "        if inverted_weights:\n",
+    "            inv += '_inv'\n",
+    "        for d in range(5,6):\n",
+    "            # computing matrix of eigenvectors and storing eigenvalues\n",
+    "            os.mkdir(f'{d}eigendata{dual}{inv}')\n",
+    "            L = construct_laplacian(d, inverted_weights, correlation)\n",
+    "            eigens = np.linalg.eig(L.todense())\n",
+    "            np.save(f'{d}eigendata{dual}{inv}/eigenvalues.npy', eigens[0])\n",
+    "            # decomposing each O-information cochain on the eigenbasis\n",
+    "            for patient in patients:    \n",
+    "                data = import_data(patient, d)\n",
+    "                cochain = data['Oinfo']\n",
+    "                x = np.linalg.solve(eigens[1], cochain)\n",
+    "                np.save(f'{d}eigendata{dual}{inv}/{d}harmonic{patient}.npy', x) #save"
    ]
   }
  ],
